# BeAR

./: .buildinfo  .gitattributes  .gitignore  CMakeLists.txt  README.md  fastchem  genindex.html  index.html  make.global_options  makefile  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/sections/: installation.doctree  licence.doctree  overview.doctree
.github/workflows/: gh-pages.yml
BrownDwarfSim/: forward_model.config  observations.list  priors.config  retrieval.config
CUDA_kernels/: band_integration_kernels.cu  band_integration_kernels.h  convolution_kernels.cu  convolution_kernels.h  cross_section_kernels.cu  cross_section_kernels.h  data_management_kernels.cu  data_management_kernels.h  error_check.h  log_like_kernels.cu  log_like_kernels.h  makefile  planck_function.h  reduce_kernels.h  short_characteristics_kernels.cu  short_characteristics_kernels.h
EmissionExample/: forward_model.config  observations.list  post_process.config  priors.config  retrieval.config
FlatLineExample/: observations.list  priors.config  retrieval.config
SecondaryEclipse/: forward_model.config  forward_model_free.config  job_script.sh  job_script_re.sh  observations_full.list
SecondaryEclipseExample/: forward_model.config  post_process.config  priors.config  retrieval.config
SecondaryEclipseExampleBB/: forward_model.config  observations.list  priors.config  retrieval.config
TransmissionExample/: forward_model.config  observations.list  post_process.config  priors.config  retrieval.config
_sources/: index.rst.txt
_sources/sections/: chemistry_models.rst.txt  cloud_models.rst.txt  forward_models.rst.txt  installation.rst.txt  observations.rst.txt  opacity_data.rst.txt  overview.rst.txt  priors.rst.txt  profile_parametrisations.rst.txt  pybear.rst.txt  pybear_details.rst.txt  retrieval_setup.rst.txt  stellar_spectra.rst.txt  temperature_profiles.rst.txt
_static/: alabaster.css
additional/: aux_functions.cpp  aux_functions.h  makefile  physical_const.h  quadrature.h
cdisort/: cdisort.c  locate.c  locate.h  makefile
cdisort_src/: cdisort_macros.h
config/: global_config.cpp  global_config.h  makefile
docs/: .buildinfo  genindex.html  index.html  objects.inv
docs/doctrees/: environment.pickle  index.doctree
docs/html/: search.html  searchindex.js
docs/sections/: installation.html  overview.html
docs_src/: conf.py  index.rst
docs_src/examples/: observations_example_2.list  post_process_sebb.config  priors_example1.config  priors_example2.config  priors_example3.config  retrieval.config_example  wavenumbers_full.dat_example
docs_src/sections/: .opacity_data.rst.kate-swp  chemistry_models.rst  cloud_models.rst  forward_models.rst  installation.rst  licence.rst  observations.rst  opacity_data.rst  priors.rst  profile_parametrisations.rst  retrieval_setup.rst  stellar_spectra.rst  temperature_profiles.rst
doctrees/sections/: installation.doctree
fastchem_src/: bisection.cpp  calc_densities.cpp  calc_densities_ph.cpp  calc_mean_mol_weight.cpp  calc_total_h_density.cpp  check.cpp  fastchem.cpp  fastchem.h  get.cpp  init.cpp  init_add_species.cpp  init_read_files.cpp  init_solver.cpp  mass_action_constant.cpp  set.cpp  solve_fastchem.cpp  solver.cpp  solver_linsol_quadsol.cpp  solver_nelder_mead_single.cpp  solver_newtsol.cpp  solver_scaling_factor.cpp
forward_model/: brown_dwarf.cpp  brown_dwarf.h  forward_model.h  makefile  piecewise_poly.cpp  piecewise_poly.h
helios_src/CUDA_kernels/: band_integration_kernels.cu  band_integration_kernels.h  cloud_model_kernels.cu  convolution_kernels.cu  convolution_kernels.h  cross_section_kernels.cu  cross_section_kernels.h  data_management_kernels.cu  data_management_kernels.h  filter_response_kernels.cu  filter_response_kernels.h  log_like_kernels.cu  log_like_kernels.h  observation_kernels.cu  rayleigh_scattering_kernels.cu  reduce_kernels.h  secondary_eclipse_kernels.cu  short_characteristics_kernels.cu  short_characteristics_kernels.h  transmission_spectrum_kernels.cu
helios_src/additional/: aux_functions.h  exceptions.h  physical_const.h  piecewise_poly.cpp  piecewise_poly.h  quadrature.h
helios_src/chemistry/: chem_species.h  chemistry.h  fastchem_chemistry.cpp  fastchem_chemistry.h  free_cbspline_chemistry.cpp  free_chemistry.cpp  free_chemistry.h  isoprofile_chemistry.cpp  isoprofile_chemistry.h  isoprofile_clr_chemistry.cpp  isoprofile_clr_chemistry.h  select_chemistry.h
helios_src/cloud_model/: cloud_model.h  grey_cloud_model.cpp  grey_cloud_model.h  kh_cloud_model.cpp  (+2 more)
model_main/: makefile  model_main.cpp
multinest/: readme.txt
observations/: makefile  observations.cpp  observations.h
python/: bear_python_wrapper.cpp  pyBear.py  pyBear_retrieval.py  pyBear_retrieval2.py  pyBear_retrieval3.py  pyBear_secondary_eclipse.py  pyBear_transmission.py
radiative_transfer/: discrete_ordinate.cpp  discrete_ordinate.h  makefile  radiative_transfer.h  short_characteristics.cpp  short_characteristics.h
retrieval/: makefile  multinest_loglike.cpp  multinest_parameter.cpp  multinest_parameter.h  post_process.cpp  post_process.h  post_process_spectra.cpp  post_process_temperatures.cpp  prior.h  retrieval.cpp  retrieval.h  retrieval_set_priors.cpp
sections/: chemistry_models.html  cloud_models.html  forward_models.html  installation.html  licence.html  observations.html  opacity_data.html  overview.html  priors.html  profile_parametrisations.html  pybear.html  pybear_details.html  retrieval_setup.html  stellar_spectra.html  temperature_profiles.html
spectral_grid/: convert.cpp  makefile  spectral_band.cpp  spectral_band.h  spectral_band_convolve.cpp  spectral_band_integrate.cpp  spectral_band_type.h  spectral_grid.cpp  spectral_grid.h
test/: forward_model.config  observations.list  priors.config  retrieval.config
transport_coeff/: chem_species.h  cia_coefficients.cpp  h2.cpp  makefile  sampled_cross_section_data.cpp  species_definition.h  transport_coeff.cpp  transport_coeff.h  transport_coeff_single_species.cpp  transport_coeff_single_species.h
(+337 files in other folders)
